--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://tomuhama.github.io/"
+baseURL = "https://tomuhama.github.io/blog-tomuhama/"
 title = "Hugo Zzo Theme"
 theme = "zzo"
 
